# akcit_genai_password_generator

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
akcit_genai_password_generator/: cli.py  generator.py  utils.py
docs/: backlog.md  diagrama.mmd  escopo-mvp.md  project_management.md
docs/comunication/: stackholders.md
docs/risks/: analysis.md  identification.md  reply.md
tests/: test_cli.py  test_generator.py  test_utils.py
